correct height on safari mobile

--- a/packages/client/src/components/style/style.scss
+++ b/packages/client/src/components/style/style.scss
@@ -25,13 +25,15 @@
 }
 
 .ant-layout {
-  min-height: 100vh;
-  max-height: 100vh;
-  height: 100vh;
+  display: flex;
+  min-height: 100vh !important;
+  min-height: -webkit-fill-available !important;
+
+  max-height: 100vh !important;
+  max-height: -webkit-fill-available !important;
 
   .ant-layout-footer {
     padding: 0;
-    bottom: 0px;
   }
 }
 
